expanded html and user feedback

--- a/sw-biometrics/index.html
+++ b/sw-biometrics/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Star-Wars Biometrics</title>
 </head>
+
 <body>
-    <input type="text"></input>
-    <button>Get</button>
-    <textarea rows="5"></textarea>
+    <form>
+        <input type="text" autofocus placeholder="Type your character here"></input>
+        <button>Get</button>
+        <div></div>
+        <textarea rows="5"></textarea>
+    </form>
     <script src="script.js"></script>
 </body>
+
 </html>
